--- a/Ansible/roles/webserver/files/preseed.j2
+++ b/Ansible/roles/webserver/files/preseed.j2
@@ -8,9 +8,9 @@ d-i debconf/priority string critical
 d-i debian-installer/locale string en_US
 d-i debian-installer/language string en
 d-i console-setup/ask_detect boolean false
-d-i debian-installer/country string it
+d-i debian-installer/country string IT
 d-i debian-installer/locale string en_US.UTF-8
-d-i console-setup/layoutcode string us
+d-i console-setup/layoutcode string US
 
 # The values can also be preseeded individually for greater flexibility.
 #d-i debian-installer/language string us
@@ -22,7 +22,7 @@ d-i console-setup/layoutcode string us
 # Keyboard selection.
 # Disable automatic (interactive) keymap detection.
 d-i console-setup/ask_detect boolean false
-d-i keyboard-configuration/xkb-keymap select us
+d-i keyboard-configuration/xkb-keymap select US
 # To select a variant of the selected layout:
 #d-i keyboard-configuration/xkb-keymap select us(dvorak)
 # d-i keyboard-configuration/toggle select No toggling
@@ -78,7 +78,7 @@ d-i netcfg/link_wait_timeout string 10
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
 d-i netcfg/disable_dhcp boolean true
-d-i netcfg/get_hostname string ubuntuhost
+d-i netcfg/get_hostname string {{ pre_set.preseed_hostname }}
 netcfg/get_hostname seen false
 d-i netcfg/get_domain seen false
 d-i netcfg/get_domain string domain
@@ -87,7 +87,7 @@ d-i netcfg/get_domain string domain
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
 # and adjust the following line.
-d-i netcfg/hostname string ubuntu
+d-i netcfg/hostname string {{ pre_set.preseed_hostname }}
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -114,8 +114,8 @@ d-i netcfg/wireless_wep string
 # If you select ftp, the mirror/country string does not need to be set.
 #d-i mirror/protocol string ftp
 d-i mirror/country string manual
-d-i mirror/http/hostname string archive.ubuntu.com
-d-i mirror/http/directory string /ubuntu
+d-i mirror/http/hostname string {{ pre_set.preseed_archive_mirror }}
+#d-i mirror/http/directory string {{ pre_set.preseed_archive_mirror_directory }}
 d-i mirror/http/proxy string
 
 # Alternatively: by default, the installer uses CC.archive.ubuntu.com where
@@ -145,13 +145,13 @@ d-i passwd/root-login boolean false
 #d-i passwd/root-password-crypted password VXRVU3.Dl/EMQ
 
 # To create a normal user account.
-d-i passwd/user-fullname string User
-d-i passwd/username string {{ preseed_user }}
+d-i passwd/user-fullname string {{ pre_set.preseed_fullname }}
+d-i passwd/username string {{ pre_set.preseed_user }}
 # Normal user's password, either in clear text
-#d-i passwd/user-password hghfg
-#d-i passwd/user-password-again hfg
+#d-i passwd/user-password {{ pre_set.preseed_password }}
+#d-i passwd/user-password-again {{ pre_set.preseed_password }}
 # or encrypted using a crypt(3) hash.
-d-i passwd/user-password-crypted password VXRVU3.Dl/EMQ
+d-i passwd/user-password-crypted password {{ pre_set.preseed_password }}
 # Create the first user with the specified UID instead of the default.
 #d-i passwd/user-uid string 1010
 # The installer will warn about weak passwords. If you are sure you know
@@ -212,7 +212,7 @@ d-i partman-auto/method string regular
 
 #unmount /dev/sda
 d-i partman/unmount_active boolean true
-d-i preseed/early_command string umount /media
+d-i preseed/early_command string {{ pre_set.preseed_early_command | default('true') }} 
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
@@ -285,7 +285,7 @@ d-i partman/confirm_nooverwrite boolean true
 # so this will only work if the disks are the same size.
 #d-i partman-auto/disk string /dev/sda /dev/sdb
 
-# Next you need to specify the physical partitions that will be used. 
+# Next you need to specify the physical partitions that will be  used. 
 #d-i partman-auto/expert_recipe string \
 #      multiraid ::                                         \
 #              1000 5000 4000 raid                          \
@@ -384,8 +384,11 @@ d-i partman/confirm_nooverwrite boolean true
 
 
 ### Package selection
+#concatenare main con ubuntu
+tasksel tasksel/first multiselect {{ pre_set.preseed_taskfirst | join(', ') }}
+
 #tasksel tasksel/first multiselect ubuntu-desktop
-tasksel tasksel/first multiselect ssh-server
+#tasksel tasksel/first multiselect ssh-server
 #tasksel tasksel/first multiselect kubuntu-desktop
 
 # Individual additional packages to install
@@ -527,4 +530,5 @@ in-target sh late_command.sh;
 #questo fa interrompere l´installazione
 #d-i preseed/run string ssh_script.sh
 
+#install vga=off console=ttyS0,115200n8 locale=en_US.UTF-8 url=217.77.95.127/preseed-ubuntu-edge.cfg priority=critical interface=enp2s0
 
