--- a/Ansible/roles/webserver/files/late_command.j2
+++ b/Ansible/roles/webserver/files/late_command.j2
@@ -11,7 +11,7 @@ sed 's/#\?\(PubkeyAuthentication\s*\).*$/\1 yes/' /etc/ssh/sshd_config > temp.tx
 
 mv -f temp.txt /etc/ssh/sshd_config
 
-if [ ! -d "/home/{{ preseed_user }}/.ssh" ]
+if [ ! -d "/home/{{ pre_set.preseed_user }}/.ssh" ]
 then
 	mkdir /home/{{ pre_set.preseed_user }}/.ssh
 	chmod 700 /home/{{ pre_set.preseed_user }}/.ssh
