--- a/Ansible/roles/webserver/files/preseed.j2
+++ b/Ansible/roles/webserver/files/preseed.j2
@@ -115,7 +115,7 @@ d-i netcfg/wireless_wep string
 #d-i mirror/protocol string ftp
 d-i mirror/country string manual
 d-i mirror/http/hostname string {{ pre_set.preseed_archive_mirror }}
-#d-i mirror/http/directory string {{ pre_set.preseed_archive_mirror_directory }}
+d-i mirror/http/directory string {{ pre_set.preseed_archive_mirror_directory }}
 d-i mirror/http/proxy string
 
 # Alternatively: by default, the installer uses CC.archive.ubuntu.com where
